# py_remote_recorder

./: .bumpversion.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
py_remote_recorder/: __main__.py  utils.py
py_remote_recorder/backend/: audio_record_functions.py  call_apis.py  record_functions.py  video_record_functions.py
record_screen_apis/backend/: call_apis.py
tests/: test_audio_part.py  test_video_part.py
