[tool.poetry]
name = "py_remote_recorder"
version = "0.0.8"
description = ""
authors = ["KlajdiBeqiraj <k.beqiraj@myw.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.8.0"
uvicorn = "^0.30.6"
fastapi = "^0.88.0"
pyaudio = "^0.2.14"
opencv-python = "^4.10.0.84"
mss = "^9.0.2"
pyautogui = "^0.9.54"
screeninfo = "^0.8.1"
pyngrok = "^7.2.0"
pydantic = "<2.0.0"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pyrecorder = "py_remote_recorder.__main__:main"
